Logo Updated and Banner image updated

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<script src="js/init.js"></script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel-noscript.css" />
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-desktop.css" />
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
@@ -31,11 +31,13 @@
 			<div class="container">
 					
 				<!-- Logo -->
-					<div id="logo">
-						<h1><a href="#">LNMIIT RESEARCH</a></h1>
+				<div class="row">
+					<div id="logo" class="col-3 col-sm-3">
+						<img src= "images/logo.jpg">
 					</div>
 				
 				<!-- Nav -->
+				<div class="col-9">
 					<nav id="nav">
 						<ul>
 							<li class="active"><a href="index.html">Homepage</a></li>
@@ -44,7 +46,8 @@
 							<li><a href="About LNMIIT.html">About LNMIIT</a></li>
 						</ul>
 					</nav>
-
+				</div>
+				</div>
 			</div>
 		</div>
 	<!-- Header -->
